--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
           <p>Apart from my regular involvements, I also like to spend time learning about various fields in Computer Graphics and Computer Networks. I really appreciate the ways of rendering a real world on a 2-d screen, which is as close to the nature as possible and yet with the liberty to include all the imaginative effects to make the outcome more appealing. I also like to play guitar, draw cartoons and drive in my free time.</p>
 
-          <p><bf>Resume : </bf><a href="https://drive.google.com/">@My Resume</a></p>
+          <p><bf>Resume : </bf><a href="https://drive.google.com/file/d/0B-bthqRuc8WnTFNBY3lsNlo5Ukk/view?usp=sharing">@My Resume</a></p>
       </section>
 
       <footer>
