--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
 
       </header>
       <section>
-
         <div id="timeline">
           <div class="timelineitem">
-            <div class="tdate">2015-</div>
+            <div class="tdate">2017-</div>
+            <div class="ttitle">Member of Technical Staff, ThoughtSpot</div>
+            <div class="tdesc"><span class="thigh">@Sage search engine</span></div>
+          </div>
+          <div class="timelineitem">
+            <div class="tdate">2015-2017</div>
             <div class="ttitle">Senior Software Engineer, Samsung Research Institute Bangalore (SRIB)</div>
             <div class="tdesc"><span class="thigh">@Advanced Technology Lab</span></div>
           </div>
@@ -64,19 +68,20 @@
 
         <h3><a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Me.</h3>
 
-          <p>I am a Senior Software Engineer working at the Natural Language Processing group at Samsung Research Institute Bangalore (India). My current work is focussed on building an intelligent mobile assistant that works on day-to-day, non-templatized human coversations.</p>
-          <p>I have recently completed my Bachelor's and Master's (Dual) Degree in Computer Science from IIT Kanpur (July 2015). There I had the opportunity to work under <a href="http://www.cse.iitk.ac.in/users/arnabb">Dr. Arnab Bhattacharya</a>, my M.Tech thesis supervisor, from whom I have learned a lot about Databases. My thesis was primarily focussed on designing a solution for Skyline Query operation, to work effectively and efficiently under highly generalized data settings, that included high-dimensionality and uncertainity in databases. I have also built an easy-to-use and highly extensible library (in C++) for using and implementing skyline algorithms, available <a href="http://akshay-agrawal.com/kopSkylines">here</a>.</p>
+          <p>I work in the search team of our search based analytics product at ThoughtSpot. My responsibilities in the project are around assisting a user search, by providing valuable suggestions through quick index lookups and modelling the search language that is also easily extensible.</p>
+          <p>Before this I have worked as a Senior Software Engineer at the Natural Language Processing group at Samsung Research Institute Bangalore (India). There my work was focussed on building an intelligent mobile assistant that works on day-to-day, non-templatized human coversations.</p>
+          <p>I completed my Bachelor's and Master's (Dual) Degree in Computer Science from IIT Kanpur (July 2015). There I had the opportunity to work under <a href="http://www.cse.iitk.ac.in/users/arnabb">Dr. Arnab Bhattacharya</a>, my M.Tech thesis supervisor, from whom I have learned a lot about Databases. My thesis was primarily focussed on designing a solution for Skyline Query operation, to work effectively and efficiently under highly generalized data settings, that included high-dimensionality and uncertainity in databases. I have also built an easy-to-use and highly extensible library (in C++) for using and implementing skyline algorithms, available <a href="http://akshayagrawal.info/kopSkylines">here</a>.</p>
           <p>I have also worked under <a href="http://csis.pace.edu/lixin">Dr. Lixin Tao</a>, a Senior IEEE Member and Chairperson of Seidenberg School of Computer Science (New York), in the domain of knowledge representation graphs, where we studied the tradeoff between the reasoning cost for including extra relationship links between the concepts in an Ontology and the amount of added expresiveness we get beyond the basic hierarchial information. I have also done a development internship at Microsoft previously.</p>
           <p>At IIT Kanpur, I have served as a Teaching assistant for 2 courses, namely, Parallel Programming and Introduction to computer Organisation both taught by <a href="http://iitk.ac.in/new/dr-ajai-jain">Dr. Ajai Jain</a> in two successive semesters.</p>
 
           <p>Apart from my regular involvements, I also like to spend time learning about various fields in Computer Graphics and Computer Networks. I really appreciate the ways of rendering a real world on a 2-d screen, which is as close to the nature as possible and yet with the liberty to include all the imaginative effects to make the outcome more appealing. I also like to play guitar, draw cartoons and drive in my free time.</p>
 
-          <p><bf>Resume : </bf><a href="https://drive.google.com/file/d/0B-bthqRuc8WnTFNBY3lsNlo5Ukk/view?usp=sharing">@My Resume</a></p>
+          <p><bf>Resume : </bf><a href="https://drive.google.com/file/d/1XMbq3ww-LLBXr7wJ2IVIN5WCoCp3wUah/view?usp=sharing">@My Resume</a></p>
       </section>
 
       <footer>
         <p><small>Hosted on GitHub Pages</p>
-        <p><small>Last updated @<i>10-Jan-2016</i></small></p>
+        <p><small>Last updated @<i>01-July-2018</i></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
